k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: agents
  labels:
    azure.workload.identity/use: "true"
